--- a/index.html
+++ b/index.html
@@ -1,9 +1,82 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>SSN Affordable Housing Project</title>
-</head>
-<body>
-    Hello, world
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Your Tableau Visualization</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                line-height: 1.6;
+                color: #333;
+                max-width: 1200px;
+                margin: 0 auto;
+                padding: 20px;
+            }
+            h1 {
+                color: #2c3e50;
+            }
+            .tableau-container {
+                width: 100%;
+                height: 700px;
+                margin-top: 20px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>SSN Affordable Housing EDA</h1>
+        <p>Description of your visualization goes here.</p>
+        <div
+            class="tableauPlaceholder"
+            id="viz1725526045962"
+            style="position: relative"
+        >
+            <noscript
+                ><a href="#"
+                    ><img
+                        alt="Dashboard 2 "
+                        src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;lo&#47;local2223&#47;Dashboard2&#47;1_rss.png"
+                        style="border: none" /></a></noscript
+            ><object class="tableauViz" style="display: none">
+                <param
+                    name="host_url"
+                    value="https%3A%2F%2Fpublic.tableau.com%2F"
+                />
+                <param name="embed_code_version" value="3" />
+                <param name="site_root" value="" />
+                <param name="name" value="local2223&#47;Dashboard2" />
+                <param name="tabs" value="no" />
+                <param name="toolbar" value="yes" />
+                <param
+                    name="static_image"
+                    value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;lo&#47;local2223&#47;Dashboard2&#47;1.png"
+                />
+                <param name="animate_transition" value="yes" />
+                <param name="display_static_image" value="yes" />
+                <param name="display_spinner" value="yes" />
+                <param name="display_overlay" value="yes" />
+                <param name="display_count" value="yes" />
+                <param name="language" value="en-US" />
+                <param name="filter" value="publish=yes" />
+            </object>
+        </div>
+        <script type="text/javascript">
+            var divElement = document.getElementById("viz1725526045962");
+            var vizElement = divElement.getElementsByTagName("object")[0];
+            if (divElement.offsetWidth > 800) {
+                vizElement.style.width = "1120px";
+                vizElement.style.height = "887px";
+            } else if (divElement.offsetWidth > 500) {
+                vizElement.style.width = "100%";
+                vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
+            } else {
+                vizElement.style.width = "100%";
+                vizElement.style.height = "927px";
+            }
+            var scriptElement = document.createElement("script");
+            scriptElement.src =
+                "https://public.tableau.com/javascripts/api/viz_v1.js";
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
+    </body>
 </html>
