remove unused code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <h1>SSN Affordable Housing EDA</h1>
-        <p>Description of your visualization goes here.</p>
+        <!-- <p>Description of your visualization goes here.</p> -->
         <div
             class="tableauPlaceholder"
             id="viz1725526045962"
