--- a/index.html
+++ b/index.html
@@ -1,82 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Your Tableau Visualization</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                line-height: 1.6;
-                color: #333;
-                max-width: 1200px;
-                margin: 0 auto;
-                padding: 20px;
-            }
-            h1 {
-                color: #2c3e50;
-            }
-            .tableau-container {
-                width: 100%;
-                height: 700px;
-                margin-top: 20px;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>SSN Affordable Housing EDA</h1>
-        <!-- <p>Description of your visualization goes here.</p> -->
-        <div
-            class="tableauPlaceholder"
-            id="viz1725526045962"
-            style="position: relative"
-        >
-            <noscript
-                ><a href="#"
-                    ><img
-                        alt="Dashboard 2 "
-                        src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;lo&#47;local2223&#47;Dashboard2&#47;1_rss.png"
-                        style="border: none" /></a></noscript
-            ><object class="tableauViz" style="display: none">
-                <param
-                    name="host_url"
-                    value="https%3A%2F%2Fpublic.tableau.com%2F"
-                />
-                <param name="embed_code_version" value="3" />
-                <param name="site_root" value="" />
-                <param name="name" value="local2223&#47;Dashboard2" />
-                <param name="tabs" value="no" />
-                <param name="toolbar" value="yes" />
-                <param
-                    name="static_image"
-                    value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;lo&#47;local2223&#47;Dashboard2&#47;1.png"
-                />
-                <param name="animate_transition" value="yes" />
-                <param name="display_static_image" value="yes" />
-                <param name="display_spinner" value="yes" />
-                <param name="display_overlay" value="yes" />
-                <param name="display_count" value="yes" />
-                <param name="language" value="en-US" />
-                <param name="filter" value="publish=yes" />
-            </object>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SSN Affordable Housing - Dashboards</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .top-header {
+            background-color: #f8f9fa;
+            padding: 10px 0;
+        }
+        .main-nav {
+            background-color: #00a4e4;
+        }
+        .main-nav .nav-link {
+            color: white !important;
+        }
+        .hero-section {
+            background-image: url('public/dashboard.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 300px;
+            position: relative;
+        }
+        .hero-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0,0,0,0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .hero-content h1 {
+            color: white;
+            font-size: 3rem;
+        }
+        .breadcrumb {
+            background-color: #f8f9fa;
+            padding: 10px 0;
+        }
+        .card {
+            border: 1px solid #dee2e6;
+            border-radius: 0.25rem;
+            height: 100%;
+            overflow: hidden;
+        }
+        .card-img-top {
+            height: 200px;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg main-nav">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Dashboards</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Help</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <script type="text/javascript">
-            var divElement = document.getElementById("viz1725526045962");
-            var vizElement = divElement.getElementsByTagName("object")[0];
-            if (divElement.offsetWidth > 800) {
-                vizElement.style.width = "1120px";
-                vizElement.style.height = "887px";
-            } else if (divElement.offsetWidth > 500) {
-                vizElement.style.width = "100%";
-                vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
-            } else {
-                vizElement.style.width = "100%";
-                vizElement.style.height = "927px";
-            }
-            var scriptElement = document.createElement("script");
-            scriptElement.src =
-                "https://public.tableau.com/javascripts/api/viz_v1.js";
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);
-        </script>
-    </body>
+    </nav>
+
+    <div class="hero-section">
+        <div class="hero-overlay">
+            <div class="hero-content">
+                <h1>Dashboards</h1>
+            </div>
+        </div>
+    </div>
+
+    <div class="breadcrumb">
+        <div class="container">
+            <a href="#">Home</a> / Dashboards
+        </div>
+    </div>
+
+    <div class="container mt-4">
+        <p>Welcome to the SSN Affordable Housing Data portal. The dashboards available here have been developed to help those involved in the residential building industry to gain a greater understanding of how we are progressing in moving our new dwellings and suburbs towards higher energy efficiency and lower emissions.</p>
+        <p>The dashboards are interactive and contain filters and controls that allow you to customize the view to answer a wide range of questions. A guide to using and navigating the dashboards is outlined below.</p>
+
+        <div class="row mt-4">
+            <div class="col-md-3 mb-4">
+                <div class="card">
+                    <img src="public/construction-cost.jpg" class="card-img-top" alt="Building">
+                    <div class="card-body">
+                        <h5 class="card-title">Building Cost</h5>
+                        <p class="card-text">Information about building cost.</p>
+                        <a href="comingsoon.html" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 mb-4">
+                <div class="card">
+                    <img src="public/approval.jpg" class="card-img-top" alt="Approval">
+                    <div class="card-body">
+                        <h5 class="card-title">Approval</h5>
+                        <p class="card-text">Data on project approvals.</p>
+                        <a href="approval.html" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 mb-4">
+                <div class="card">
+                    <img src="public/construction-finish.jpg" class="card-img-top" alt="Completion">
+                    <div class="card-body">
+                        <h5 class="card-title">Completion</h5>
+                        <p class="card-text">Information on completed projects.</p>
+                        <a href="comingsoon.html" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 mb-4">
+                <div class="card">
+                    <img src="public/construction-start.jpg" class="card-img-top" alt="Start">
+                    <div class="card-body">
+                        <h5 class="card-title">Start</h5>
+                        <p class="card-text">Data on project initiations.</p>
+                        <a href="comingsoon.html" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
