add SSN to description

--- a/about.html
+++ b/about.html
@@ -123,10 +123,10 @@
 
                 <h3>Key Features of HSI:</h3>
                 <ul>
-                    <li>Reflects both social and physical/environmental challenges faced by the Australian housing market</li>
-                    <li>Provides a measurement of affordability from environmental considerations and regulatory constraints</li>
-                    <li>Helps local governments and developers identify potential areas to develop affordable housing</li>
-                    <li>Assists in determining appropriate financing resources for these projects</li>
+                    <li>Write here.</li>
+                    <li>Write here.</li>
+                    <li>Write here.</li>
+                    <li>Write here.</li>
                 </ul>
 
                 <h3>Impact of HSI:</h3>
@@ -143,14 +143,14 @@
 
                 <h2>Our Values</h2>
                 <ul>
-                    <li>Innovation: We constantly seek new ways to improve housing affordability and sustainability.</li>
-                    <li>Collaboration: We believe in the power of partnerships to drive meaningful change.</li>
-                    <li>Integrity: We uphold the highest standards of honesty and transparency in all our endeavors.</li>
-                    <li>Sustainability: We are committed to creating housing solutions that are environmentally responsible and energy-efficient.</li>
+                    <li>Write here.</li>
+                    <li>Write here.</li>
+                    <li>Write here.</li>
+                    <li>Write here.</li>
                 </ul>
             </div>
             <div class="col-lg-4">
-                <img src="/api/placeholder/400/300?text=HSI+Project" alt="HSI Project" class="img-fluid mb-4">
+                <!-- <img src="/api/placeholder/400/300?text=HSI+Project" alt="HSI Project" class="img-fluid mb-4"> -->
                 <h3>Housing Sustainability Indices</h3>
                 <p>Our HSI project is at the forefront of combining affordability metrics with sustainability factors, providing a new perspective on housing development in Australia.</p>
                 <a href="#" class="btn btn-primary">Learn More About HSI</a>
