--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <div class="container mt-4">
-        <p>Welcome to the SSN Affordable Housing Data portal. The dashboards available here have been developed to help those involved in the residential building industry to gain a greater understanding of how we are progressing in moving our new dwellings and suburbs towards higher energy efficiency and lower emissions.</p>
+        <p>Welcome to the SSN Affordable Housing Data portal. This project is supported by Deakin Science and Society Network (SSN) The dashboards available here have been developed to help those involved in the residential building industry to gain a greater understanding of how we are progressing in moving our new dwellings and suburbs in Australia.</p>
         <p>The dashboards are interactive and contain filters and controls that allow you to customize the view to answer a wide range of questions. A guide to using and navigating the dashboards is outlined below.</p>
 
         <div class="row mt-4">
